2005-08-27  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/FieldDefinition.cs:
		Correct a bug that causes null ref due to
		the new api.
	* Mono.Cecil.Signatures/SignatureWriter.cs:
		Implement a very little more custom attributes
		writing.

2005-08-26  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IMemberReferenceCollection.cs
	  Mono.Cecil/IReflectionVisitor.cs
	  Mono.Cecil/IReflectionFactories.cs
	  Mono.Cecil/BaseReflectionVisitor.cs
	  Mono.Cecil/IModuleDefinition.cs
	  CodeGen/cecil.xml
	  Mono.Cecil.Implem/ReflectionFactories.cs
	  Mono.Cecil.Implem/ReflectionHelper.cs
	  Mono.Cecil.Implem/ModuleDefinition.cs
	  Mono.Cecil.Implem/MemberReferenceCollection.cs
	  Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/ParameterDefinition.cs:
		Handle member references nicely.

	* Mono.Cecil/ICustomAttributeProvider.cs
	  Mono.Cecil/IModuleDefinitionCollection.cs
	  Mono.Cecil/IReflectionStructureFactories.cs
	  Mono.Cecil/IInterfaceCollection.cs
	  Mono.Cecil/IMethod.cs
	  Mono.Cecil/IReflectionFactories.cs
	  Mono.Cecil/INestedTypeCollection.cs
	  Mono.Cecil/ITypeReferenceCollection.cs
	  Mono.Cecil/IExternTypeCollection.cs
	  Mono.Cecil/IAssemblyDefinition.cs
	  Mono.Cecil/ITypeDefinition.cs
	  Mono.Cecil/ICustomAttribute.cs
	  Mono.Cecil/IArrayDimensionCollection.cs
	  Mono.Cecil/TypeFactory.cs
	  Mono.Cecil/IConstructorCollection.cs
	  Mono.Cecil/IHasSecurity.cs
	  Mono.Cecil/IMethodDefinitionCollection.cs
	  Mono.Cecil/IPropertyDefinitionCollection.cs
	  Mono.Cecil/IAssemblyNameReferenceCollection.cs
	  Mono.Cecil/IModuleReferenceCollection.cs
	  Mono.Cecil/IArrayType.cs
	  Mono.Cecil/ISecurityDeclarationCollection.cs
	  Mono.Cecil/IModuleDefinition.cs
	  Mono.Cecil/IResourceCollection.cs
	  Mono.Cecil/IParameterDefinitionCollection.cs
	  Mono.Cecil/IEventDefinitionCollection.cs
	  Mono.Cecil/ITypeDefinitionCollection.cs
	  Mono.Cecil/IFieldDefinitionCollection.cs