@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Fri Aug 26 00:56:33 CEST 2005
+ * Sat Aug 27 15:37:29 CEST 2005
  *
  *****************************************************************************/
 
@@ -336,6 +336,7 @@ namespace Mono.Cecil.Binary {
 			m_relocWriter.BaseStream.Position = 0;
 			m_relocWriter.Write (rva);
 			m_relocWriter.BaseStream.Position = 8;
+			reloc -= rva - m_textSect.VirtualAddress;
 			m_relocWriter.Write ((ushort) ((3 << 12) | reloc));
 
 			m_textWriter.Write (hnt.EntryPoint);
